<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white_grey">
    
    <EditText 
        android:id="@+id/tv_name"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/tvName"
        android:inputType="text"
        android:singleLine="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/edit_round_style"/>
    
    <EditText 
        android:id="@+id/tv_url"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/tvUrl"
        android:inputType="textUri"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/edit_round_style"/>
    
    <AutoCompleteTextView
        android:layout_margin="10dp"
        android:id="@+id/tv_type"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/tvType"
        android:completionThreshold="1"
        android:padding="10dp"
        android:background="@drawable/edit_round_style"/>
     
		<Button 
            android:id="@+id/save"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/btn_save"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_style"/>
        
    

</LinearLayout>
